# py-mealdb

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: tests.yml
content/: .gitignore  _quarto.yml  index.qmd  license.md  objects.json  quarto.yml  styles.scss
content/_site/: about.html  contributing.html  index.html  license.html  mozilla.scss  search.json  sitemap.xml  styles.css
content/docs/: about.html  contributing.html  index.html  license.html  search.json
content/reference/: MealDB.qmd  index.qmd  index.qmd.qmd  mealdb.MealDB.filter_by_area.qmd  mealdb.MealDB.filter_by_category.qmd  mealdb.MealDB.filter_by_ingredient.qmd  mealdb.MealDB.get_ingredient_image.qmd  mealdb.MealDB.get_ingredient_image_small.qmd  mealdb.MealDB.get_latest_meal.qmd  mealdb.MealDB.get_meal_by_name.qmd  mealdb.MealDB.list_all_categories.qmd  mealdb.MealDB.list_all_ingredients.qmd  mealdb.MealDB.list_all_meals.qmd  mealdb.MealDB.list_meal_categories.qmd  mealdb.MealDB.meal_details_by_id.qmd  mealdb.MealDB.single_random_meal.qmd  models.AreaList.qmd  models.BaseList.qmd  models.CategoryList.qmd  models.IngredientList.qmd  (+31 more)
docs/: CNAME  _quarto.yml  about.html  contributing.qmd  index.html  index.qmd  license.html  objects.json  search.json
mealdb/: __init__.py
reference/: index.qmd.qmd  mealdb.MealDB.get_latest_meal.qmd  mealdb.MealDB.list_all.qmd  mealdb.MealDB.list_all_areas.qmd  mealdb.MealDB.list_all_ingredients.qmd  mealdb.MealDB.meal_details_by_id.qmd
src/: models.py
tests/: test_mealdb.py
(+107 files in other folders)
