[tool.poetry]
name = "py-mealdb"
version = "0.1.0"
description = "this is an api wrapper over The Meal DB"
authors = ["Sherwin-14 <varghesesheriwn@gmail.com>"]
readme = "README.md"
license = "CC-BY-NC-SA-4.0"

packages = [
    { include = "mealdb" },
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
ratelimit = "^2.2.1"
quarto = "^0.1.0"
quartodoc = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
