[project]
name = "py-mealdb"
version = "0.1.8"
description = "The MealDB API wrapper"
authors = [{name= "Sherwin Varghese", email = "varghesesheriwn@gmail.com"}]
readme = "README.md"
license = "EPL-2.0"
dependencies = [
    "httpx>=0.28.1",
    "quarto>=0.1.0",
    "quartodoc>=0.11.1",
]

[project.urls]
repository = "https://github.com/Sherwin-14/py-mealdb/"
documentation = "https://sherwin-14.github.io/py-mealdb/"



[project.group.docs.dependencies]
quarto = "^0.1.0"
quartodoc = "^0.9.1"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
